--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Acme&family=Bree+Serif&family=Courier+Prime&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Acme&family=Bree+Serif&family=Caveat:wght@500&family=Courier+Prime&family=Permanent+Marker&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>FarmEasy | A new way to buy and sell farm products </title>
   <style media="screen">
@@ -61,7 +61,7 @@
 
     .global-banner {
       width: 100%;
-      height: 100vh;
+      height: 110vh;
       position: relative;
       box-sizing: border-box;
       background-position: center;
@@ -100,7 +100,7 @@
       width: 100%;
       padding: 16px 30px;
       box-sizing: border-box;
-      top: 45%;
+      top: 40%;
       color: beige;
       text-align: center;
       margin-top: -110px;
@@ -125,7 +125,7 @@
   <div class="clear-space ">
     <section class="global-banner" style="background-image : url('https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/ramkumar-radhakrishnan-wikimedia-1622193304-1622193304.jpeg')">
       <header class="header-of-page">
-        <div class="header-content">
+        <div class="header-content sticky-top">
           <nav class="navbar navbar-expand-lg bg-link navbar-light" style="margin-bottom: .4em; border:solid; border-bottom:.20em; border-color:transparent; background-color: transparent; ">
             <!-- foralwhite -->
             <a class="navbar-brand" href="#" style="color:white; font-family: 'Permanent Marker', cursive; font-size: 1.5em; ">
@@ -238,17 +238,14 @@
       </header>
       <div class="inner-content">
         <div class="container">
-          <h1 class="heading-text">Revolutionizing the Fresh Produce Supply Chain</h1>
-          <h5 style="font-size: x-large;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
-<!--           <button type="button" class="btn " style="background: linear-gradient(to right, #ffefba, #ffffff); opacity: .9;">
-            <a href="#" class="nav-link" style="padding:0px; background: linear-gradient(to bottom, #bdc3c7, #2c3e50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Join Us</a>
-          </button> -->
+          <h1 class="heading-text" style="margin-bottom:.5em">Revolutionizing the Fresh Produce Supply Chain</h1>
+
+          <h5 style="font-size: x-large; font-family: 'Roboto Mono', monospace;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
         </div>
       </div>
   </div>
   </section>
   </div>
-
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -258,3 +255,4 @@
 </html>
 <!-- &nbsp; -->
 <!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
+
